# flask-playground

./: .gitignore  README.md  app.py  pyproject.toml
app/: __init__.py  routes.py
routes/: __init__.py  file1.py  file2.py  file3.py
